<resources>
    <string name="app_name">AIC Kongowea</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_house">\"My House Will Be Called A House Of Prayer For All Nations\"</string>
    <string name="title_activity_covid_info">COVID-19</string>

    <string name="codesndata_com">Book in advance to help enable better planning and stop COVID-19</string>
    <string name="aic_icon">aic_icon</string>
    <string name="_1st_service_8_30_9_30_am">1st Service: 8:30 \- 9:30 AM</string>
    <string name="_2nd_service_10_30_11_30_am">2nd Service: 10:30 \- 11:30 AM</string>
    <string name="_3rd_service_12_30_1_30_pm">3rd Service: 12:30 \- 1:30 PM</string>
    <string name="_4th_service_2_30_3_30_pm">4th Service: 2:30 \- 3:30 PM</string>
    <string name="gen_pdf">Generating PDF Document\.\.\.</string>
    <string name="generated_pdf">PDF Document Generated!</string>
    <string name="jina_la_kwanza">Jina la Kwanza</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>//
    <string name="jina_la_mwisho">Jina la Mwisho</string>
    <string name="phone_no">Phone No.</string>
    <string name="namba_ya_simu">Namba ya Simu</string>
    <string name="service_booking">Register for Church Service</string>
    <string name="choose_service">Choose Service</string>Please, choose service
    <string name="submit">Submit</string>
    <string name="service_choice">Please, choose service</string>
    <string name="fill_all_details">Field required</string>
    <string name="valid_phone_no">Please, enter a valid phone number</string>
    <string name="phoneno">PhoneNo</string>
    <string name="service">Service</string>
    <string name="choose_service_to_view">Choose Service to View</string>
    <string name="pos">Pos</string>
    <string name="no_result">No one has registered, yet\.\.\.</string>
    <string name="mark_11_17">(Mark 11:17)</string>
    <string name="website">codesndata.com</string>
    <string name="social_media">Social Media</string>
    <string name="title_activity_social_media">SocialMediaActivity</string>
</resources>
