<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:orientation="vertical"
    tools:context=".covid_19.MainCovidActivity"
    tools:layout_editor_absoluteY="137dp"
    tools:showIn="@layout/activity_maincovid">

    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/design_default_color_background"
        tools:ignore="PrivateResource">

        <!--        <TextView-->
        <!--            android:id="@+id/home_title"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@id/logo"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:fadingEdge="horizontal"-->
        <!--            android:requiresFadingEdge="horizontal"-->
        <!--            android:shadowColor="@android:color/black"-->
        <!--            android:shadowDx="5"-->
        <!--            android:shadowRadius="5"-->
        <!--            android:text="@string/app_name"-->
        <!--            android:textAlignment="center"-->
        <!--            android:textColor="@color/colorAccent"-->
        <!--            android:textSize="35sp"-->
        <!--            android:textStyle="bold"-->
        <!--            android:typeface="serif" />-->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/aic_icon"
            android:src="@drawable/church_header"
            tools:ignore="PrivateResource" />

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/details_panel"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="2dp"
        android:elevation="2dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="2dp"
        tools:ignore="PrivateResource">

        <RelativeLayout
            android:id="@+id/body_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_margin="5dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/book_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="serif"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowRadius="2"
                android:text="@string/service_booking"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/choose_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_service"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:shadowColor="@android:color/black"
                android:shadowDx="3"
                android:shadowRadius="2"
                android:text="@string/choose_service"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent" />

            <RadioGroup
                android:id="@+id/radiogrup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/choose_service"
                android:layout_centerHorizontal="true">


                <RadioButton
                    android:id="@+id/service_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:text="@string/_1st_service_8_30_9_30_am" />

                <RadioButton
                    android:id="@+id/service_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:text="@string/_2nd_service_10_30_11_30_am" />

                <RadioButton
                    android:id="@+id/service_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:text="@string/_3rd_service_12_30_1_30_pm" />

                <RadioButton
                    android:id="@+id/service_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:text="@string/_4th_service_2_30_3_30_pm" />
            </RadioGroup>

            <RelativeLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radiogrup"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_margin="5dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="serif"
                    android:hint="@string/jina_la_kwanza"
                    android:inputType="textPersonName|textCapWords"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="5"
                    android:shadowRadius="5"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/firstname"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="serif"
                    android:hint="@string/jina_la_mwisho"
                    android:inputType="textPersonName|textCapWords"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="5"
                    android:shadowRadius="5"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/phoneno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lastname"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="serif"
                    android:hint="@string/namba_ya_simu"
                    android:inputType="phone"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="5"
                    android:shadowRadius="5"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/response_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorPrimary" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/buttonstyle"
                android:fontFamily="serif"
                android:onClick="submitDetails"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowRadius="5"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/tertiary_text_light"
        android:fontFamily="casual"
        android:gravity="bottom|center_horizontal"
        android:shadowColor="@android:color/black"
        android:shadowDx="3"
        android:shadowRadius="2"
        android:text="@string/codesndata_com"
        android:textColor="@color/design_default_color_background" />
</LinearLayout>