<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appNs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_marginStart="5dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="3dp"
    android:elevation="5dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="2dp"
    appNs:cardPreventCornerOverlap="true"
    appNs:contentPadding="5dp"
    app:ignore="NamespaceTypo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pos_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="0dp"
            android:gravity="start"
            android:text="@string/pos"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="40dp"
            android:gravity="start"
            android:text="@string/first_name"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/fname_tv"
            android:layout_marginTop="3dp"
            android:layout_marginStart="30dp"
            android:gravity="start"
            android:text="@string/last_name"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/service_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lname_tv"
            android:fontFamily="serif"
            android:gravity="start|top"
            android:text="@string/service"
            android:layout_marginStart="40dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tbooked_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_tv"
            android:layout_toEndOf="@id/zero_tv"
            android:fontFamily="serif"
            android:gravity="start|top"
            android:maxLength="6"
            android:text="@string/phone_no"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/zero_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_tv"
            android:layout_marginStart="40dp"
            android:fontFamily="serif"
            android:gravity="start|top"
            android:text="Phone No.: 0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/omit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_tv"
            android:layout_toEndOf="@id/tbooked_tv"
            android:fontFamily="serif"
            android:gravity="start|top"
            android:text="..."
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>