<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:paddingLeft="2dp"
    android:paddingTop="2dp"
    android:paddingRight="2dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/nav_header_desc"
        android:fadingEdge="vertical"
        android:shadowColor="@color/design_default_color_on_secondary"
        android:shadowDx="5"
        android:shadowRadius="5"
        app:srcCompat="@drawable/church_header" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-light"
        android:requiresFadingEdge="horizontal"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="2"
        android:shadowRadius="2"
        android:text="@string/my_house"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/book_verse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif-light"
        android:requiresFadingEdge="horizontal"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="2"
        android:shadowRadius="2"
        android:text="@string/mark_11_17"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="10sp" />

</RelativeLayout>
