<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".covid_19.ViewActivity"
    tools:layout_editor_absoluteY="137dp"
    tools:showIn="@layout/activity_view">

    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_background"
        tools:ignore="PrivateResource">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/aic_icon"
            android:src="@drawable/church_header"
            tools:ignore="PrivateResource" />

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/details_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="2dp"
        android:elevation="2dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="2dp"
        tools:ignore="PrivateResource">

        <RelativeLayout
            android:id="@+id/body_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/choose_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowRadius="2"
                android:text="@string/choose_service_to_view"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/buttonstyle"
                android:onClick="fetchData"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowRadius="2"
                app:backgroundTint="@color/text_color"
                app:srcCompat="@drawable/contacts"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fab_1"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@drawable/buttonstyle"
                android:onClick="printData"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowRadius="2"
                app:backgroundTint="@color/text_color"
                app:srcCompat="@drawable/logs_list" />

            <RadioGroup
                android:id="@+id/radiogrup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/choose_service"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="fetchData">


                <RadioButton
                    android:id="@+id/service_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:text="@string/_1st_service_8_30_9_30_am" />

                <RadioButton
                    android:id="@+id/service_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:text="@string/_2nd_service_10_30_11_30_am" />

                <RadioButton
                    android:id="@+id/service_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:text="@string/_3rd_service_12_30_1_30_pm" />

                <RadioButton
                    android:id="@+id/service_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowRadius="2"
                    android:text="@string/_4th_service_2_30_3_30_pm" />
            </RadioGroup>

            <ListView
                android:id="@+id/data_lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/radiogrup"
                android:scrollbars="vertical"
                android:shadowColor="@android:color/black"
                android:shadowDx="3"
                android:shadowRadius="2"
                tools:ignore="MissingConstraints">

            </ListView>

            <TextView
                android:id="@+id/response_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:maxLength="29"
                android:textColor="@color/text_color" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                app:layout_constrainedHeight="false"
                app:layout_constrainedWidth="false"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="120dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>